# gluestick

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  askama.toml  deny.toml  justfile  package-lock.json
.circleci/: config.yml
docs/: json-api.md
src/: auth.rs  config.rs  lib.rs  main.rs  validators.rs
src/assets/css/: main.1b5a1d2aaf53a25c5cd5697aaab18401.css  main.45916e7e2f3eb81337f1a6f0ba8647d6.css  main.559ce33128609509403d65e2a62ac980.css  main.5f31be37a44fb02c8c23356858cbd22a.css  main.63b6640e2f5bffdad88055f948b18dbd.css  main.ae896581c462dcab045856ae3d475612.css  main.bd55e376bc559cda3d8dce05df5fde5b.css  main.c0fac44c1387f0ab5276d0ac4caa37b0.css  main.css  main.d652c68921a9ea3a37081936666adcc7.css  main.eedb522b7228f03f87a42b93b45f9451.css  main.fa0f3d821134f4e40e89159288c95705.css  style.css
src/assets/images/: console-preview.avif  console.avif  desert-skull-preview.avif  desert-skull.avif  exploding-console-preview.avif  exploding-console.avif  james-preview.avif  james.avif  lost-james-preview.avif  lost-james.avif  monstera-plant.avif  monstera-preview.avif  monstera.avif  padlock-preview.avif  padlock.avif  retro-console.avif  sneaker-preview.avif  sneaker.avif  tennis-shoe.avif
src/controllers/: api_sessions.rs  api_sessions_controller.rs  application_controller.rs  index.rs  misc.rs  mod.rs  pastes.rs  pastes_controller.rs  prelude.rs  sessions.rs  sessions_controller.rs  users.rs  users_controller.rs
src/controllers/api/: application_controller.rs  mod.rs  pastes.rs  pastes_controller.rs  prelude.rs
src/db/: mod.rs
src/db/migrations/: 01-init.sql  02-syntax-highlight-cache.sql  03-change-user-email-constraint.sql
src/extractors/: auth.rs
src/helpers/: mod.rs  pagination.rs  syntax_highlight.rs  syntax_highlight_helper.rs  view_helper.rs
src/models/: api_session.rs  invite_code.rs  mod.rs  paste.rs  prelude.rs  session.rs  user.rs
src/params/: mod.rs  pastes.rs  prelude.rs  sessions.rs  users.rs
src/params/api/: pastes.rs
src/views/: 401.html  403.html  404.html  500.html  about.html  base.html  index.html  index.rs  mod.rs  new_paste.html  pastes.rs  pastes_index.html  pastes_new.html  pastes_show.html  sessions.rs  users.rs  users_new.html
src/views/api_sessions/: create.html  create.rs  mod.rs
src/views/errors/: 401.html  403.html  404.html  500.html  forbidden.rs  internal_server_error.rs  mod.rs  not_found.rs  unauthorized.rs
src/views/partials/: about.html
src/views/pastes/: edit.html  edit.rs  index.html  index.rs  mod.rs  new.html  new.rs  show.html  show.rs
src/views/pastes/partials/: edit_pastes_form.html  new_pastes_form.html
src/views/sessions/: mod.rs  new.html  new.rs
src/views/users/: mod.rs  new.html  new.rs  settings.html  settings.rs  show.html  show.rs
src/views/users/partials/: change_password_form.html  email_input.html  password_input.html  username_input.html
tests/: base.rs  health_check.rs  main.rs  pastes.rs  prelude.rs
tests/common/: api_key_helper.rs  app.rs  client.rs  mod.rs  pagination_helper.rs  paste_helper.rs  rand_helper.rs  test_app.rs  test_client.rs  test_paste.rs  user_helper.rs
tests/common/mocks/: mock_api_key.rs  mock_pagination.rs  mock_paste.rs  mock_user.rs  mod.rs
tests/html_api/: health.rs  misc.rs  misc_tests.rs  mod.rs  paste_tests.rs  pastes.rs  user_tests.rs  users.rs
tests/json_api/: misc.rs  misc_tests.rs  mod.rs  paste_tests.rs  pastes.rs
