[package]
name = "gluestick"
version = "0.1.0"
authors = ["Nick Willett-Jeffries"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "gluestick"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
derive_more = "0.99.18"
dotenvy = "0.15.7"
garde = { version = "0.19.2", features = ["email", "derive"] }
memory-serve = "0.4.5"
rand = "0.8.5"
rand_chacha = "0.3.1"
rusqlite = { version = "0.31.0", features = ["bundled", "uuid"] }
rusqlite_migration = { version = "1.2.0", features = ["alpha-async-tokio-rusqlite"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
sha2 = "0.10.8"
syntect = "5.2.0"
thiserror = "1.0.61"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-rusqlite = "0.5.1"
tower-http = { version = "0.5.2", features = ["trace", "compression-full", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v7", "fast-rng", "serde"] }

[dev-dependencies]
once_cell = "1.19.0"
reqwest = { version = "0.12.4", features = ["json", "cookies"] }
