[package]
name = "gluestick"
version = "0.1.0"
authors = ["Nick Willett-Jeffries"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "gluestick"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
derive_more = { version = "1.0.0", features = ["as_ref", "display", "from", "into", "is_variant"] }
dotenvy = "0.15.7"
jiff = { version = "0.1.12", features = ["serde"] }
memory-serve = "0.6.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rusqlite = { version = "0.32.0", features = ["bundled", "uuid"] }
rusqlite_migration = { version = "1.3.1", features = ["alpha-async-tokio-rusqlite"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.209", features = ["derive"] }
sha2 = "0.10.8"
syntect = "5.2.0"
thiserror = "2.0.11"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-rusqlite = "0.6.0"
tower-http = { version = "0.5.2", features = ["compression-full", "timeout", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.12.0", features = ["fast-rng", "serde", "v7"] }

[dev-dependencies]
reqwest = { version = "0.12.7", features = ["cookies", "json"] }
